# ontoderive

./: .coverage  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  coverage.xml  pyproject.toml  setup.py
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  test.yml
.omc/state/: agent-replay-54f759bc-e215-4655-ad06-d6a1e5500cb8.jsonl  agent-replay-7e4858cc-be47-404f-97b1-613206ff717b.jsonl  last-tool-error.json  mission-state.json  subagent-tracking.json
Plans/: abundant-twirling-cocke-agent-a7530db88283124ec.md  abundant-twirling-cocke.md  v3.5-plan.md
demo-quick/: README.md
demo-quick/entities/: actors.md
demo-quick/facts/: data.md  policy.md
demo-quick/inferences/: analysis.md
demo-quick/scheme/: report.md
demo-tpl/: README.md
demo-tpl/facts/: data.md
docs/: AGENTS.md  AGENT_GUIDE.md  ARCHITECTURE.md  FORMAL_REASONING_DESIGN.md  LLM_REASONING.md  LLM_REASONING_DEEP.md  MANIFESTO.md  PRODUCT_VISION.md  REASONING_PATTERNS.md  ROADMAP.md  USER_GUIDE.md
engine/: __init__.py  bayesian.py  check.py  check_theory.py  cli.py  constants.py  controller.py  derive.py  extractor.py  formalize.py  insight.py  judge.py  llm.py  logic.py  mcp-config.json  mcp-server.py  mcp_handlers.py  mcp_server.py  metrics.py  models.py  ontolang.py  pipeline.py  pipeline_v4.py  reasoner.py  reasoner_formal.py  reasoning.py  turing_k.py  unified_reasoner.py  utils.py  watcher.py  web_server.py
engine/core/: __init__.py  check.py  check_theory.py  derive.py  export.py  pipeline.py
engine/ecosystem/: __init__.py  agora.py  ecos.py  eidos_adapter.py  minerva.py  sophia.py
engine/foundation/: __init__.py  config.py  constants.py  models.py  ontology_map.py  protocols.py  rule_loader.py  utils.py  (+3 more)
framework/: 02-迭代方案-v2.md
graphify-out/: .graphify_analysis.json  .graphify_ast.json  .graphify_chunk_input_0.json  .graphify_chunk_input_1.json  .graphify_chunk_input_2.json  .graphify_chunk_input_3.json  .graphify_chunk_input_4.json  .graphify_chunk_input_5.json  .graphify_chunk_input_6.json  .graphify_chunk_input_7.json  .graphify_detect.json  .graphify_extract.json  .graphify_python  .graphify_root  .graphify_uncached.txt  GRAPH_REPORT.md  graph.html  graph.json
ns/: NAMESPACE.md
self-verify/: README.md
skills/: ontoderive-skill.md
tests/: conftest.py  test_analytics.py  test_analytics_patterns.py  test_bayesian.py  test_check.py  test_check_theory.py  test_cli.py  test_config.py  test_controller.py  test_derive.py  test_e2e.py  test_ecosystem.py  test_eidos_adapter.py  test_export.py  test_extractor.py  test_formalize.py  test_foundation_semantic.py  test_got.py  test_insight.py  test_integration.py  test_judge.py  test_llm.py  test_logic.py  test_mcp_server.py  test_metrics.py  test_models.py  test_ner.py  test_ontolang.py  test_ontolang_codegen.py  test_ontolang_parser.py  test_ontology_map.py  test_pipeline.py  test_pipeline_v4.py  test_prompts.py  test_protocols.py  test_react.py  test_reasoner.py  test_reasoner_formal.py  test_redteam_integration.py  test_rule_loader.py  (+9 more)
分析中国新能源汽车市场/: README.md
分析新能源汽车市场竞争格局/: README.md
(+110 files in other folders)
