[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ontoderive"
version = "2.2.0"
description = "OntoDerive 渊衍框架 — 事实驱动的一体化知识工程与方案推导。含 ToolForge 工具匹配模块。"
authors = [{name = "夏明星"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["knowledge-engineering", "ontology", "derivation", "fact-driven", "protocol-checking", "toolforge", "思维工具"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff"]

[project.scripts]
ontoderive = "engine.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/ontoderive"
Repository = "https://github.com/your-org/ontoderive"

[tool.setuptools]
packages = ["engine", "engine.toolforge", "engine.ontolang", "engine.ecosystem"]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["engine"]
addopts = ["-v", "--tb=short"]
