[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ontoderive"
version = "3.6.4"
description = "OntoDerive 渊衍框架 — 事实驱动的一体化知识工程与方案推导。含 ToolForge 工具匹配模块。"
authors = [{name = "夏明星"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["knowledge-engineering", "ontology", "derivation", "fact-driven", "protocol-checking", "toolforge", "思维工具"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = ["pyyaml"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff"]
llm = ["openai"]
web = ["fastapi", "uvicorn"]

[project.scripts]
ontoderive = "engine.cli:main"

[project.urls]
Homepage = "https://github.com/starlink-awaken/ontoderive"
Repository = "https://github.com/starlink-awaken/ontoderive"

[tool.setuptools.packages.find]
include = ["engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["engine"]
addopts = ["-v", "--tb=short"]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "RUF100"]

[tool.ruff.format]
quote-style = "double"
